# django-graphiql-debug-toolbar

./: .coveragerc  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test-suite.yml
graphiql_debug_toolbar/: middleware.py  serializers.py
graphiql_debug_toolbar/static/graphiql_debug_toolbar/js/: parse.js
graphiql_debug_toolbar/templates/graphiql_debug_toolbar/: base.html
scripts/: lint.sh  test.sh
tests/: settings.py  test_middleware.py  test_serializers.py  urls.py
