[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-graphiql-debug-toolbar"
version = "0.2.0"
description = "Django Debug Toolbar for GraphiQL IDE."
license = "MIT"
authors = ["mongkok <dani@domake.io>"]
readme = "README.md"
include = ["LICENSE", "README.md"]
keywords = ["django", "graphql", "graphiql", "debug"]

homepage = "https://github.com/flavors/django-graphiql-debug-toolbar"
repository = "https://github.com/flavors/django-graphiql-debug-toolbar"

packages = [
    { include = "graphiql_debug_toolbar" },
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"

Django = ">=2.2"
graphene-django = ">=2.0.0"
django-debug-toolbar = ">=3.1"

[tool.poetry.dev-dependencies]
black = "*"
codecov = "*"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
extend-exclude = '''
/(
  | .htmlcov
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = "migrations"
default_section = "THIRDPARTY"
known_django = "django"
known_first_party = "graphiql_debug_toolbar"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
